deployed_site/assets/css/main.css
/* ... */
/* Basic */

@-ms-viewport {
	width: device-width;
}

body {
	-ms-overflow-style: scrollbar;
}

@media screen and (max-width: 480px) {
	html,
	body {
		min-width: 320px;
	}
}

body {
	background: #f00;
}

body.is-loading *,
body.is-loading *:before,
body.is-loading *:after {
	-moz-animation: none !important;
	-webkit-animation: none !important;
	-ms-animation: none !important;
	animation: none !important;
	-moz-transition: none !important;
	-webkit-transition: none !important;
	-ms-transition: none !important;
	transition: none !important;
}


/* Type */

body {
	background-color: #f00;
	color: #111111;
}

body,
input,
select,
textarea {
	font-family: "Lato", sans-serif;
	font-size: 15pt;
	font-weight: 300;
	line-height: 2;
}

@media screen and (max-width: 1680px) {
	body,
	input,
	select,
	textarea {
		font-size: 13pt;
	}
}

@media screen and (max-width: 1280px) {
	body,
	input,
	select,
	textarea {
		font-size: 13pt;
	}
}

@media screen and (max-width: 980px) {
	body,
	input,
	select,
	textarea {
		font-size: 12pt;
	}
}

@media screen and (max-width: 736px) {
	body,
	input,
	select,
	textarea {
		font-size: 12pt;
	}
}

@media screen and (max-width: 480px) {
	body,
	input,
	select,
	textarea {
		font-size: 12pt;
	}
}

a {
	-moz-transition: color 0.2s ease-in-out;
	-webkit-transition: color 0.2s ease-in-out;
	-ms-transition: color 0.2s ease-in-out;
	transition: color 0.2s ease-in-out;
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

strong,
b {
	font-weight: 700;
}

em,
i {
	font-style: italic;
}

p {
	margin: 0 0 2em 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	font-weight: 700;
	line-height: 1.5;
	margin: 0 0 1em 0;
	text-transform: uppercase;
}

h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
h6 a {
	color: inherit;
	text-decoration: none;
}

h1 {
	font-size: 2em;
	margin: 0 0 0.25em 0;
}

h2 {
	font-size: 1.75em;
}

h3 {
	font-size: 1.35em;
}

h4 {
	font-size: 1.1em;
}

h5 {
	font-size: 0.9em;
}

h6 {
	font-size: 0.7em;
}

@media screen and (max-width: 736px) {
	h1 {
		font-size: 1.5em;
	}
	h2 {
		font-size: 1.25em;
	}
	h3 {
		font-size: 1.1em;
	}
}

sub {
	font-size: 0.8em;
	position: relative;
	top: 0.5em;
}

sup {
	font-size: 0.8em;
	position: relative;
	top: -0.5em;
}

blockquote {
	border-left: solid 4px;
	font-style: italic;
	margin: 0 0 2em 0;
	padding: 0.5em 0 0.5em 2em;
}

code {
	border-radius: 0;
	border: solid 1px;
	font-family: "Courier New", monospace;
	font-size: 0.9em;
	margin: 0 0.25em;
	padding: 0.25em 0.65em;
}

pre {
	-webkit-overflow-scrolling: touch;
	font-family: "Courier New", monospace;
	font-size: 0.9em;
	margin: 0 0 2em 0;
}

pre code {
	display: block;
	line-height: 1.75;
	padding: 1em 1.5em;
	overflow-x: auto;
}

hr {
	border: 0;
	border-bottom: solid 1px;
	margin: 2em 0;
}

hr.major {
	margin: 3em 0;
}

.align-left {
	text-align: left;
}

.align-center {
	text-align: center;
}

.align-right {
	text-align: right;
}

input,
select,
textarea {
	color: #e5474b;
}

a {
	color: #e5474b;
}

strong,
b {
	color: #e5474b;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	color: #e5474b;
}

blockquote {
	border-left-color: #e5474b;
}

code {
	background: none;
	border-color: #e5474b;
}

hr {
	border-bottom-color: #e5474b;
}


/* Box */

.box {
	border-radius: 0;
	border: solid 1px;
	margin-bottom: 2em;
	padding: 1.5em;
}

.box> :last-child,
.box> :last-child> :last-child,
.box> :last-child> :last-child> :last-child {
	margin-bottom: 0;
}

.box.alt {
	border: 0;
	border-radius: 0;
	padding: 0;
}

.box {
	border-color: #e5474b;
}


/* Button */

input[type="submit"],
input[type="reset"],
input[type="button"],
button,
.button {
	-moz-appearance: none;
	-webkit-appearance: none;
	-ms-appearance: none;
	appearance: none;
	-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
	-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
	-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
	transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
	border-radius: 0;
	border: 0;
	cursor: pointer;
	display: inline-block;
	font-size: .8em;
	font-weight: 700;
	height: 3.5em;
	line-height: 3.65em;
	padding: 0 2.25em;
	text-align: center;
	text-decoration: none;
	text-transform: uppercase;
	white-space: nowrap;
}

input[type="submit"]:hover,
input[type="reset"]:hover,
input[type="button"]:hover,
button:hover,
.button:hover {
	text-decoration: none;
}

input[type="submit"].icon,
input[type="reset"].icon,
input[type="button"].icon,
button.icon,
.button.icon {
	padding-left: 1.35em;
}

input[type="submit"].icon:before,
input[type="reset"].icon:before,
input[type="button"].icon:before,
button.icon:before,
.button.icon:before {
	margin-right: 0.5em;
}

input[type="submit"].fit,
input[type="reset"].fit,
input[type="button"].fit,
button.fit,
.button.fit {
	display: block;
	margin: 0 0 1em 0;
	width: 100%;
}

input[type="submit"].small,
input[type="reset"].small,
input[type="button"].small,
button.small,
.button.small {
	font-size: 0.8em;
}

input[type="submit"].big,
input[type="reset"].big,
input[type="button"].big,
button.big,
.button.big {
	font-size: 1.35em;
}

input[type="submit"].disabled,
input[type="submit"]:disabled,
input[type="reset"].disabled,
input[type="reset"]:disabled,
input[type="button"].disabled,
input[type="button"]:disabled,
button.disabled,
button:disabled,
.button.disabled,
.button:disabled {
	-moz-pointer-events: none;
	-webkit-pointer-events: none;
	-ms-pointer-events: none;
	pointer-events: none;
	opacity: 0.25;
}

input[type="submit"],
input[type="reset"],
input[type="button"],
button,
.button {
	background-color: #5a5a5a;
	color: #ffffff !important;
}

input[type="submit"]:hover,
input[type="reset"]:hover,
input[type="button"]:hover,
button:hover,
.button:hover {
	background-color: #676767;
}

input[type="submit"]:active,
input[type="reset"]:active,
input[type="button"]:active,
button:active,
.button:active {
	background-color: #4d4d4d;
}
/* ... */

